--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -41,15 +41,15 @@
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
       <div id="example">
-  
+
         <div id="example-group"
              class="datepicker-spinbuttons"
              role="group"
              aria-labelledby="myDatepickerLabel myDatepickerDate">
-  
+
              <div id="myDatepickerLabel">Choose a Date</div>
              <div class="date" hidden id="myDatepickerDate">current value is Friday, June 30th, 2019</div>
-  
+
           <div  class="day spinbutton"
   >         <button type="button" class="decrease"
                   tabindex="-1"
@@ -75,7 +75,7 @@
               </svg>
             </button>
           </div>
-  
+
           <div  class="month spinbutton">
             <button type="button" class="decrease"
                   tabindex="-1"
@@ -101,7 +101,7 @@
               </svg>
             </button>
           </div>
-  
+
           <div  class="year spinbutton">
             <button type="button" class="decrease"
                   tabindex="-1"
@@ -149,7 +149,7 @@
         </li>
       </ul>
     </section>
-    
+
     <section>
       <h2 id="kbd_label">Keyboard Support</h2>
       <p>The spin buttons provide the following keyboard support described in the <a href="../../#spinbutton">spin button design pattern.</a></p>
@@ -176,7 +176,7 @@
             <td>
               <ul>
                 <li>Increases the value 1 step.</li>
-                <li>When focus is on the <q>Day</q> spin button and the value is the lastt day of the month, changes value to the first day of the month.</li>
+                <li>When focus is on the <q>Day</q> spin button and the value is the last day of the month, changes value to the first day of the month.</li>
                 <li>When focus is on the <q>Month</q> spin button and the value is <q>December</q>, changes value to <q>January</q>.</li>
               </ul>
             </td>
@@ -191,7 +191,7 @@
           </tr>
           <tr data-test-id="spinbutton-home">
             <th><kbd>Home</kbd></th>
-            <td>Decreases to mimimum value.</td>
+            <td>Decreases to minimum value.</td>
           </tr>
           <tr data-test-id="spinbutton-end">
             <th><kbd>End</kbd></th>
@@ -316,7 +316,7 @@
         </tbody>
       </table>
     </section>
-  
+
     <section>
       <h2>Javascript and CSS Source Code</h2>
       <ul>
