toolbar: update help reference to editors draft

--- a/examples/toolbar/help.html
+++ b/examples/toolbar/help.html
@@ -19,7 +19,7 @@
 
 <h1>Toolbar Help</h1>
 
-<p>Learn more about toolbar behaviors by reading the <a href="https://www.w3.org/TR/wai-aria-practices-1.1/#toolbar">ARIA Authoring Practices Guide</a>.</p>
+<p>Learn more about toolbar behaviors by reading the <a href="https://w3c.github.io/aria-practices/#toolbar">ARIA Authoring Practices Guide</a>.</p>
 
 </body>
 </html>
