breadcrumb: remove reference to 1.1 in relative file path

--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -32,7 +32,7 @@
         <nav aria-label="Breadcrumb" class="breadcrumb">
           <ol>
             <li>
-              <a href="../../">WAI-ARIA Authoring Practices 1.1</a>
+              <a href="../../">WAI-ARIA Authoring Practices</a>
             </li>
             <li>
               <a href="../../#aria_ex">Design Patterns</a>
