--- a/examples/listbox/listbox-grouped.html
+++ b/examples/listbox/listbox-grouped.html
@@ -43,7 +43,7 @@
     <div id="ex">
       <div class="listbox-area">
         <div>
-          <span id="ss_elem">Choose your animal sidekick</span>
+          <span id="ss_elem" class="listbox-label">Choose your animal sidekick</span>
           <div id="ss_elem_list" tabindex="0" role="listbox" aria-labelledby="ss_elem">
             <ul role="group" aria-labelledby="cat1">
               <li role="presentation" id="cat1">Land</li>
