--- a/examples/listbox/listbox-rearrangeable.html
+++ b/examples/listbox/listbox-rearrangeable.html
@@ -51,7 +51,7 @@ while in the second example, they may select multiple options before activating 
         <p>Rank features important to you when choosing where to live. If a feature is unimportant, move it to the unimportant features list.</p>
         <div class="listbox-area">
           <div class="left-area">
-            <span id="ss_imp_l">Important Features:</span>
+            <span id="ss_imp_l" class="listbox-label">Important Features:</span>
             <ul id="ss_imp_list" tabindex="0" role="listbox" aria-labelledby="ss_imp_l">
               <li id="ss_opt1" role="option">Proximity of public K-12 schools</li>
               <li id="ss_opt2" role="option">Proximity of child-friendly parks</li>
@@ -71,7 +71,7 @@ while in the second example, they may select multiple options before activating 
             </div>
           </div>
           <div class="right-area">
-            <span id="ss_unimp_l">Unimportant Features:</span>
+            <span id="ss_unimp_l" class="listbox-label">Unimportant Features:</span>
             <ul id="ss_unimp_list" tabindex="0" role="listbox" aria-labelledby="ss_unimp_l" aria-activedescendant="">
             </ul>
             <button type="button" id="ex1-add" class="move-left-btn" aria-keyshortcuts="Alt+ArrowLeft Enter" aria-disabled="true">Important</button>
@@ -110,7 +110,7 @@ while in the second example, they may select multiple options before activating 
         <p>Choose upgrades for your transport capsule.</p>
         <div class="listbox-area">
           <div class="left-area">
-            <span id="ms_av_l">Available upgrades:</span>
+            <span id="ms_av_l" class="listbox-label">Available upgrades:</span>
             <ul
               id="ms_imp_list"
               tabindex="0"
@@ -131,7 +131,7 @@ while in the second example, they may select multiple options before activating 
             <button type="button" id="ex2-add" class="move-right-btn" aria-keyshortcuts="Alt+ArrowRight Enter" aria-disabled="true">Add</button>
           </div>
           <div class="right-area">
-            <span id="ms_ch_l">Upgrades you have chosen:</span>
+            <span id="ms_ch_l" class="listbox-label">Upgrades you have chosen:</span>
             <ul
               id="ms_unimp_list"
               tabindex="0"
