--- a/examples/listbox/listbox-scrollable.html
+++ b/examples/listbox/listbox-scrollable.html
@@ -46,7 +46,7 @@
       <p>Choose your favorite transuranic element (actinide or transactinide).</p>
       <div class="listbox-area">
         <div>
-          <span id="ss_elem">Transuranium elements:</span>
+          <span id="ss_elem" class="listbox-label">Transuranium elements:</span>
           <ul id="ss_elem_list" tabindex="0" role="listbox" aria-labelledby="ss_elem">
             <li id="ss_elem_Np" role="option">Neptunium</li>
             <li id="ss_elem_Pu" role="option">Plutonium</li>
