added type=button to button elements

--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -77,6 +77,7 @@
                 <div class="controls">
 
                   <button class="rotation pause"
+                          type="button"
                           aria-label="Stop automatic slide show">
                     <svg width="42" height="34" version="1.1" xmlns="http://www.w3.org/2000/svg">
                       <rect class="background" x="2" y="2" rx="5" ry="5" width="38" height="24"/>
@@ -95,6 +96,7 @@
                        aria-label="Slides">
                     <div class="border">
                       <button id="carousel-tab-1"
+                              type="button"
                               role="tab"
                               aria-label="Slide 1"
                               aria-selected="true"
@@ -106,6 +108,7 @@
                         </svg>
                       </button>
                       <button id="carousel-tab-2"
+                              type="button"
                               role="tab"
                               tabindex="-1"
                               aria-label="Slide 2"
@@ -118,6 +121,7 @@
                         </svg>
                       </button>
                       <button id="carousel-tab-3"
+                              type="button"
                               role="tab"
                               tabindex="-1"
                               aria-label="Slide 3"
@@ -130,6 +134,7 @@
                         </svg>
                       </button>
                       <button id="carousel-tab-4"
+                              type="button"
                               role="tab"
                               tabindex="-1"
                               aria-label="Slide 4"
@@ -142,6 +147,7 @@
                         </svg>
                       </button>
                       <button id="carousel-tab-5"
+                              type="button"
                               role="tab"
                               tabindex="-1"
                               aria-label="Slide 5"
@@ -154,6 +160,7 @@
                         </svg>
                       </button>
                       <button id="carousel-tab-6"
+                              type="button"
                               role="tab"
                               tabindex="-1"
                               aria-label="Slide 6"
