--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2153,9 +2153,7 @@
     <section class="widget" id="meter">
       <h3>Meter</h3>
       <p>
-        A <a class="role-reference" href="#meter">meter</a> allows authors to define a value within a known range.
-        The minimum and maximum limits of the range must be defined numerically,
-        and the value should be a number within the range.
+        A <a class="role-reference" href="#meter">meter</a> is a graphical display of a numeric value that varies within a defined range.
       </p>
       <p>
         Meter examples include a device's current battery percentage and a car's fuel level.
@@ -2186,7 +2184,9 @@
           <li>The meter has <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> set to a decimal value less than or equal to <code>aria-valuemax</code>.</li>
           <li>The meter has <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> set to a decimal value greater than or equal to <code>aria-valuemin</code>.</li>
           <li>
-            If the value of <code>aria-valuenow</code> is not user-friendly, e.g., the day of the week is represented by a number, the <a class="property-reference" href="#aria-valuetext">aria-valuetext</a> property is set to a string that makes the slider value understandable, e.g., &quot;Monday&quot;.
+            Assistive technologies often present <code>aria-valuenow</code> as a percentage.
+            If conveying the value of the meter only in terms of a percentage would not be user friendly, the <a class="property-reference" href="#aria-valuetext">aria-valuetext</a> property is set to a string that makes the meter value understandable.
+            For example, a battery meter value might be conveyed as <code>aria-valuetext="50% (6 hours) remaining"</code>.
           </li>
           <li>If the meter has a visible label, it is referenced by <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> on the element with role <code>meter</code>. Otherwise, the element with role <code>meter</code> has a label provided by <a href="#aria-label" class="property-reference">aria-label</a>.</li>
         </ul>
