Apply suggestions from code review
Co-Authored-By: Matt King <a11yThinker@Gmail.com>

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4603,7 +4603,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
               <td>Required</td>
               <td>
                 <ul>
-                  <li>If the <code>meter</code> role is applied to an HTML <code>meter</code> element, can be named with an HTML <code>label</code> element.</li>
+                  <li>If based on an HTML <code>meter</code> element, can be named with an HTML <code>label</code> element.</li>
                   <li>Otherwise use <code>aria-labelledby</code> if a visible label is present.</li>
                   <li>Use <code>aria-label</code> if a visible label is not present.</li>
                 </ul>
@@ -4891,7 +4891,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
               </td>
             </tr>
             <tr>
-              <td><a href="#blockquote" class="role-reference"><code>time</code></a></td>
+              <td><a href="#time" class="role-reference"><code>time</code></a></td>
               <td>Discretionary</td>
               <td>
                 <ul>
