--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2154,18 +2154,16 @@
       <h3>Meter</h3>
       <p>
         A <a class="role-reference" href="#meter">meter</a> is a graphical display of a numeric value that varies within a defined range.
+        For example, a meter could be used to depict a device's current battery percentage or a car's fuel level.
       </p>
-      <p>
-        Meter examples include a device's current battery percentage and a car's fuel level.
-        A <code>meter</code> should not be used to represent a value like the current world population,
-        since there is no meaningful maximum limit.
-      </p>
-      <p class="note">
-        The <code>meter</code> should not be used to indicate progress,
-        such as loading or percent completion of a task.
-        For that, use the <a href="#progressbar" class="role-reference">progressbar</a> role instead.
-      </p>
-
+      <ul class="note">
+        <li>A <code>meter</code> should not be used to represent a value like the current world population since it does not have a meaningful maximum limit.</li>
+        <li>
+          The <code>meter</code> should not be used to indicate progress, such as loading or percent completion of a task.
+          To communicate progress, use the <a href="#progressbar" class="role-reference">progressbar</a> role instead.
+        </li>
+      </ul>
+        
       <section class="notoc">
         <h4>Example</h4>
         <p><a href="examples/meter/meter.html">Meter Example</a></p>
