Do not let value min and max be equal

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2179,8 +2179,8 @@
         <ul>
           <li>The element serving as the meter has a role of <a class="role-reference" href="#meter">meter</a>.</li>
           <li>The meter has <a class="property-reference" href="#aria-valuenow">aria-valuenow</a> set to a decimal value between <code>aria-valuemin</code> and <code>aria-valuemax</code> representing the current value of the meter.</li>
-          <li>The meter has <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> set to a decimal value less than or equal to <code>aria-valuemax</code>.</li>
-          <li>The meter has <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> set to a decimal value greater than or equal to <code>aria-valuemin</code>.</li>
+          <li>The meter has <a class="property-reference" href="#aria-valuemin">aria-valuemin</a> set to a decimal value less than <code>aria-valuemax</code>.</li>
+          <li>The meter has <a class="property-reference" href="#aria-valuemax">aria-valuemax</a> set to a decimal value greater than <code>aria-valuemin</code>.</li>
           <li>
             Assistive technologies often present <code>aria-valuenow</code> as a percentage.
             If conveying the value of the meter only in terms of a percentage would not be user friendly, the <a class="property-reference" href="#aria-valuetext">aria-valuetext</a> property is set to a string that makes the meter value understandable.
