--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -54,12 +54,11 @@
           Fruits and vegetables
         </label>
         <div class="combobox-wrapper">
-          <div role="combobox"
-            aria-expanded="false"
-            aria-owns="ex1-grid"
-            aria-haspopup="grid"
-            id="ex1-combobox">
+          <div id="ex1-combobox">
             <input type="text"
+              aria-role="combobox"
+              aria-haspopup="grid"
+              aria-expanded="false"
               aria-autocomplete="list"
               aria-controls="ex1-grid"
               id="ex1-input">
@@ -222,74 +221,6 @@
         Information about other ways of applying ARIA roles, states, and properties is available in the
         <a href="../../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
       </p>
-      <h3 id="rps_label_combobox">Combobox Container</h3>
-      <table aria-labelledby="rps_label_combobox rps_label" class="data attributes">
-        <thead>
-          <tr>
-            <th scope="col">Role</th>
-            <th scope="col">Attribute</th>
-            <th scope="col">Element</th>
-            <th scope="col">Usage</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr data-test-id="combobox-role">
-            <th scope="row">
-              <code>combobox</code>
-            </th>
-            <td></td>
-            <td><code>div</code></td>
-            <td>
-              <ul>
-                <li>Identifies the element as a combobox.</li>
-                <li>Note:
-                  <ul>
-                    <li>Unlike this ARIA 1.1 combobox, an ARIA 1.0 pattern would have the <code>combobox</code> role on the textbox input instead of a parent container of the textbox.</li>
-                    <li>The ARIA 1.1 pattern demonstrated on this page enables screen reader users to perceive both the input and the popup when using reading mode (see note below about aria-owns).</li>
-                  </ul>
-                </li>
-              </ul>
-            </td>
-          </tr>
-          <tr data-test-id="combobox-aria-haspopup">
-            <td></td>
-            <th scope="row">
-              <code>aria-haspopup=<q>grid</q></code>
-            </th>
-            <td><code>div</code></td>
-            <td>Indicates that the combobox can popup a <code>grid</code> to suggest values.</td>
-          </tr>
-          <tr data-test-id="combobox-aria-owns">
-            <td></td>
-            <th scope="row">
-              <code>aria-owns=<q>IDREF</q></code>
-            </th>
-            <td><code>div</code></td>
-            <td>
-              <ul>
-                <li>Refers to the element that serves as the grid popup.</li>
-                <li>Tells browsers to arrange the screen reader reading order so the grid, when it is visible,  immediately follows the other elements inside the combobox, regardless of where the grid element is in the DOM.</li>
-              </ul>
-            </td>
-          </tr>
-          <tr data-test-id="combobox-aria-expanded">
-            <td></td>
-            <th scope="row">
-              <code>aria-expanded=<q>false</q></code>
-            </th>
-            <td><code>div</code></td>
-            <td>Indicates that the popup element <strong>is not</strong> displayed.</td>
-          </tr>
-          <tr data-test-id="combobox-aria-expanded">
-            <td></td>
-            <th scope="row">
-              <code>aria-expanded=<q>true</q></code>
-            </th>
-            <td><code>div</code></td>
-            <td>Indicates that the popup element <strong>is</strong> displayed.</td>
-          </tr>
-        </tbody>
-      </table>
       <h3 id="rps_label_textbox">Textbox</h3>
       <table aria-labelledby="rps_label_textbox rps_label" class="data attributes">
         <thead>
@@ -301,6 +232,44 @@
           </tr>
         </thead>
         <tbody>
+          <tr data-test-id="textbox-role">
+            <th scope="row">
+              <code>combobox</code>
+            </th>
+            <td></td>
+            <td><code>input[type="text"]</code></td>
+            <td>
+              <ul>
+                <li>Identifies the element as a combobox.</li>
+                <li>Note: Unlike this ARIA 1.2 combobox, an ARIA 1.1 pattern would have the <code>combobox</code> role on the a container element of the textbox input instead of the textbox.</ul>
+                </li>
+              </ul>
+            </td>
+          </tr>
+          <tr data-test-id="textbox-aria-haspopup">
+            <td></td>
+            <th scope="row">
+              <code>aria-haspopup=<q>grid</q></code>
+            </th>
+            <td><code>input[type="text"]</code></td>
+            <td>Indicates that the combobox can popup a <code>grid</code> to suggest values.</td>
+          </tr>
+          <tr data-test-id="textbox-aria-expanded">
+            <td></td>
+            <th scope="row">
+              <code>aria-expanded=<q>false</q></code>
+            </th>
+            <td><code>input[type="text"]</code></td>
+            <td>Indicates that the popup element <strong>is not</strong> displayed.</td>
+          </tr>
+          <tr data-test-id="textbox-aria-expanded">
+            <td></td>
+            <th scope="row">
+              <code>aria-expanded=<q>true</q></code>
+            </th>
+            <td><code>input[type="text"]</code></td>
+            <td>Indicates that the popup element <strong>is</strong> displayed.</td>
+          </tr>
           <tr data-test-id="textbox-id">
             <td></td>
             <th scope="row">
