made documentation edit

--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -241,7 +241,7 @@
             <td>
               <ul>
                 <li>Identifies the element as a combobox.</li>
-                <li>Note: Unlike this ARIA 1.2 combobox, an ARIA 1.1 pattern would have the <code>combobox</code> role on the a container element of the textbox input instead of the textbox.</ul>
+                <li>Note: Unlike this ARIA 1.2 combobox, an ARIA 1.1 pattern would have the <code>combobox</code> role on a container element of the textbox input instead of the textbox itself.</ul>
                 </li>
               </ul>
             </td>
