updated file name to make testing easier

--- a/examples/combobox/grid-combobox.html
+++ b/examples/combobox/grid-combobox.html
@@ -56,7 +56,7 @@
         <div class="combobox-wrapper">
           <div id="ex1-combobox">
             <input type="text"
-              aria-role="combobox"
+              role="combobox"
               aria-haspopup="grid"
               aria-expanded="false"
               aria-autocomplete="list"
