--- a/examples/listbox/listbox-grouped.html
+++ b/examples/listbox/listbox-grouped.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Scrollable Listbox Example | WAI-ARIA Authoring Practices 1.2</title>
+<title>Listbox Example with Grouped Options | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -26,60 +26,51 @@
     </ul>
   </nav>
   <main>
-  <h1>Scrollable Listbox Example</h1>
+  <h1>Listbox Example with Grouped Options</h1>
   <p>
-    The following example implementation of the
-    <a href="../../#Listbox">design pattern for listbox</a>
-    demonstrates a scrollable single-select listbox widget.
-    This widget is functionally similar to an HTML <code>select</code> input where the <code>size</code> attribute has a value greater than one.
+    The following example implementation of the <a href="../../#Listbox">design pattern for listbox</a> demonstrates a single-select listbox widget with grouped options.
+    This widget is functionally similar to an HTML <code>select</code> element with <code>size</code> greater than 1 and options grouped into categories with labeled <code>optgroup</code> elements.
   </p>
   <p>Similar examples include:</p>
   <ul>
+    <li><a href="listbox-scrollable.html">Scrollable Listbox Example</a>: Single-select listbox that scrolls to reveal more options, similar to HTML <code>select</code> with <code>size</code> attribute greater than one.</li>
     <li><a href="listbox-rearrangeable.html">Example Listboxes with Rearrangeable Options</a>: Examples of both single-select and multi-select listboxes with accompanying toolbars where options can be added, moved, and removed.</li>
     <li><a href="listbox-collapsible.html">Collapsible Dropdown Listbox Example</a>: Single-select collapsible listbox that expands when activated, similar to HTML <code>select</code> with the attribute <code>size=&quot;1&quot;</code>.</li>
-    <li><a href="listbox-grouped.html">Listbox Example with Grouped Options</a>: Single-select listbox with grouped options, similar to an HTML <code>select</code> with <code>optgroup</code> children.</li>
   </ul>
   <section>
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex">
-      <p>Choose your favorite transuranic element (actinide or transactinide).</p>
       <div class="listbox-area">
         <div>
-          <span id="ss_elem" class="listbox-label">Transuranium elements:</span>
-          <ul id="ss_elem_list" tabindex="0" role="listbox" aria-labelledby="ss_elem">
-            <li id="ss_elem_Np" role="option">Neptunium</li>
-            <li id="ss_elem_Pu" role="option">Plutonium</li>
-            <li id="ss_elem_Am" role="option">Americium</li>
-            <li id="ss_elem_Cm" role="option">Curium</li>
-            <li id="ss_elem_Bk" role="option">Berkelium</li>
-            <li id="ss_elem_Cf" role="option">Californium</li>
-            <li id="ss_elem_Es" role="option">Einsteinium</li>
-            <li id="ss_elem_Fm" role="option">Fermium</li>
-            <li id="ss_elem_Md" role="option">Mendelevium</li>
-            <li id="ss_elem_No" role="option">Nobelium</li>
-            <li id="ss_elem_Lr" role="option">Lawrencium</li>
-            <li id="ss_elem_Rf" role="option">Rutherfordium</li>
-            <li id="ss_elem_Db" role="option">Dubnium</li>
-            <li id="ss_elem_Sg" role="option">Seaborgium</li>
-            <li id="ss_elem_Bh" role="option">Bohrium</li>
-            <li id="ss_elem_Hs" role="option">Hassium</li>
-            <li id="ss_elem_Mt" role="option">Meitnerium</li>
-            <li id="ss_elem_Ds" role="option">Darmstadtium</li>
-            <li id="ss_elem_Rg" role="option">Roentgenium</li>
-            <li id="ss_elem_Cn" role="option">Copernicium</li>
-            <li id="ss_elem_Nh" role="option">Nihonium</li>
-            <li id="ss_elem_Fl" role="option">Flerovium</li>
-            <li id="ss_elem_Mc" role="option">Moscovium</li>
-            <li id="ss_elem_Lv" role="option">Livermorium</li>
-            <li id="ss_elem_Ts" role="option">Tennessine</li>
-            <li id="ss_elem_Og" role="option">Oganesson</li>
-          </ul>
+          <span id="ss_elem" class="listbox-label">Choose your animal sidekick</span>
+          <div id="ss_elem_list" tabindex="0" role="listbox" aria-labelledby="ss_elem">
+            <ul role="group" aria-labelledby="cat1">
+              <li role="presentation" id="cat1">Land</li>
+              <li id="ss_elem_1" role="option">Cat</li>
+              <li id="ss_elem_2" role="option">Dog</li>
+              <li id="ss_elem_3" role="option">Tiger</li>
+              <li id="ss_elem_4" role="option">Reindeer</li>
+              <li id="ss_elem_5" role="option">Raccoon</li>
+            </ul>
+            <ul role="group" aria-labelledby="cat2">
+              <li role="presentation" id="cat2">Water</li>
+              <li id="ss_elem_6" role="option">Dolphin</li>
+              <li id="ss_elem_7" role="option">Flounder</li>
+              <li id="ss_elem_8" role="option">Eel</li>
+            </ul>
+            <ul role="group" aria-labelledby="cat3">
+              <li role="presentation" id="cat3">Air</li>
+              <li id="ss_elem_9" role="option">Falcon</li>
+              <li id="ss_elem_10" role="option">Winged Horse</li>
+              <li id="ss_elem_11" role="option">Owl</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
-    <h4>Notes</h4>
+    <h3>Notes</h3>
     <p>This listbox is scrollable; it has more options than its height can accommodate.</p>
     <ol>
       <li>
@@ -95,8 +86,10 @@
         </ol>
       </li>
       <li>When a fully visible option is focused in any way, no scrolling occurs.</li>
-      <li>Normal scrolling through any scrolling mechanism (including <kbd>Page Up</kbd> and <kbd>Page Down</kbd>) works as expected.
-        The scroll position will jump as described for <code>focusItem</code> if a means other than a mouse click is used to change focus after scrolling.</li>
+      <li>
+        Normal scrolling through any scrolling mechanism (including <kbd>Page Up</kbd> and <kbd>Page Down</kbd>) works as expected.
+        The scroll position will jump as described for <code>focusItem</code> if a means other than a mouse click is used to change focus after scrolling.
+      </li>
     </ol>
   </section>
 
@@ -155,25 +148,25 @@
         <tr data-test-id="listbox-role">
           <th scope="row"><code>listbox</code></th>
           <td></td>
-          <td><code>ul</code></td>
+          <td><code>div</code></td>
           <td>Identifies the focusable element that has listbox behaviors and contains the listbox options. </td>
         </tr>
         <tr data-test-id="listbox-aria-labelledby">
           <td></td>
           <th scope="row"><code>aria-labelledby=&quot;ID_REF&quot;</code></th>
-          <td><code>ul</code></td>
+          <td><code>div</code></td>
           <td>Refers to the element containing the listbox label.</td>
         </tr>
         <tr data-test-id="listbox-tabindex">
           <td></td>
           <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
-          <td><code>ul</code></td>
+          <td><code>div</code></td>
           <td>Includes the listbox in the page tab sequence.</td>
         </tr>
         <tr data-test-id="listbox-aria-activedescendant">
           <td></td>
           <th scope="row"><code>aria-activedescendant=&quot;ID_REF&quot;</code></th>
-          <td><code>ul</code></td>
+          <td><code>div</code></td>
           <td>
             <ul>
               <li>Tells assistive technologies which of the options, if any, is visually indicated as having keyboard focus.</li>
@@ -181,6 +174,18 @@
               <li>When navigation keys, such as <kbd>Down Arrow</kbd>, are pressed, the JavaScript changes the value.</li>
             </ul>
           </td>
+        </tr>
+        <tr data-test-id="group-role">
+          <th scope="row"><code>role=&quot;group&quot;</code></th>
+          <td></td>
+          <td><code>ul</code></td>
+          <td>Identifies a group of related options</td>
+        </tr>
+        <tr data-test-id="group-aria-labelledby">
+          <td></td>
+          <th scope="row"><code>aria-labelledby=&quot;ID_REF&quot;</code></th>
+          <td><code>ul</code></td>
+          <td>Refers to the element containing the option group label.</td>
         </tr>
         <tr data-test-id="option-role">
           <th scope="row"><code>role=&quot;option&quot;</code></th>
