--- a/examples/combobox/combobox-autocomplete-list.html
+++ b/examples/combobox/combobox-autocomplete-list.html
@@ -39,6 +39,12 @@
       Thus, after typing, if the user tabs or clicks out of the combobox without choosing a value from the listbox, the typed string becomes the value of the combobox.
       Note that this implementation enables users to input the name of a state or territory, but it does not prevent input of any other arbitrary value.
     </p>
+    <p>Similar examples include:</p>
+    <ul>
+      <li><a href="combobox-autocomplete-both.html">Combobox with Both List and Inline Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q>.</li>
+      <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: A combo box that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
+      <li><a href="grid-combo.html">Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
+    </ul>
     
     <section>
       <h2 id="ex_label">Example</h2>
