Update paths and text for combobox-autocomplete-none.html

--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -31,7 +31,7 @@
     <h1>Combobox With Both List and Inline Autocomplete Example</h1>
     <p>
       The below combobox for choosing the name of a US state or territory demonstrates the
-      <a href="../../#combobox">ARIA 1.0 design pattern for combobox.</a>
+      <a href="../../#combobox">design pattern for combobox.</a>
       The design pattern describes four types of autocomplete behavior.
       This example illustrates the autocomplete behavior referred to in the pattern as list with inline completion.
       If the user types one or more characters in the edit box and the typed characters match the beginning of the name of one or more states or territories,
@@ -315,7 +315,7 @@
           <tr data-test-id="combobox-aria-controls">
             <td></td>
             <th scope="row">
-              <code>aria-owns="#IDREF"</code>
+              <code>aria-controls="#IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
             <td>Identifies the element that serves as the popup.</td>
@@ -428,7 +428,7 @@
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-list.js" type="text/javascript">combobox-1.0-list.js</a>
+          <a href="js/combobox-list.js" type="text/javascript">combobox-list.js</a>
         </li>
         <li>
           Javascript:
