--- a/examples/combobox/combobox-autocomplete-none.html
+++ b/examples/combobox/combobox-autocomplete-none.html
@@ -2,40 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Legacy ARIA 1.0 Combobox without Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
+<title>Combobox without Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-<link rel="stylesheet" href="../../css/core.css">
-<script src="../../js/examples.js"></script>
-<script src="../../js/highlight.pack.js"></script>
-<script src="../../js/app.js"></script>
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
-<link href="css/combobox-1.0.css" rel="stylesheet">
+<link href="css/combobox.css" rel="stylesheet">
 <link  href="css/listbox.css"     rel="stylesheet">
-<script src="js/combobox-1.0-list.js"  type="text/javascript"></script>
+<script src="js/combobox-list.js"  type="text/javascript"></script>
 <script src="js/listbox.js"       type="text/javascript"></script>
 <script src="js/listboxOption.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
     <ul>
-      <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
       <li><a href="https://github.com/w3c/aria-practices/projects/7">Related Issues</a></li>
-      <li><a href="../../../#combobox">Design Pattern</a></li>
+      <li><a href="../../#combobox">Design Pattern</a></li>
     </ul>
   </nav>
   <main>
-    <h1>Legacy ARIA 1.0 Combobox without Autocomplete Example</h1>
-    <p>
-      <strong>NOTE:</strong> Please provide feedback on this example page in
-      <a href="https://github.com/w3c/aria-practices/issues/555">issue 555.</a>
-    </p>
+    <h1>Combobox without Autocomplete Example</h1>
     <p>
       The below combobox that enables users to choose a term from a hypothetical list of previously searched terms demonstrates the
-      <a href="../../../#combobox">ARIA 1.0 design pattern for combobox.</a>
+      <a href="../../#combobox">ARIA design pattern for combobox.</a>
       The design pattern describes four types of autocomplete behavior.
       This example illustrates the autocomplete behavior known as <q>no autocomplete</q>.
       The terms that appear in the listbox popup are not related to the string that is present in the textbox.
@@ -43,11 +39,11 @@
     </p>
     <p>Similar examples include: </p>
     <ul>
-    <li><a href="combobox-autocomplete-list.html">ARIA 1.0 Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q> and uses the ARIA 1.0 implementation pattern.</li>
-    <li><a href="combobox-autocomplete-both.html">ARIA 1.0 Combobox with Both List and Inline Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q> and uses the ARIA 1.0 implementation pattern.</li>
-      <li><a href="../aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup</a>: Comboboxes that demonstrate the various forms of autocomplete behavior using a listbox popup and use the ARIA 1.1 implementation pattern.</li>
-      <li><a href="../aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
+      <li><a href="combobox-autocomplete-list.html">Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
+      <li><a href="combobox-autocomplete-both.html">Combobox with Both List and Inline Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q>.</li>
+      <li><a href="grid-combo.html">Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
     </ul>
+    
     <section>
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
@@ -60,7 +56,7 @@
                    aria-autocomplete="none"
                    aria-expanded="false"
                    aria-haspopup="true"
-                   aria-owns="cb1-listbox"
+                   aria-controls="cb1-listbox"
             />
             <button type="button" id="cb1-button" tabindex="-1" aria-label="Open">
               &#9661;
@@ -89,7 +85,7 @@
       <p>
       The example combobox on this page implements the following keyboard interface.
         Other variations and options for the keyboard interface are described in the
-        <a href="../../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
+        <a href="../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
       </p>
       <h3 id="kbd_label_textbox">Textbox</h3>
       <table aria-labelledby="kbd_label_textbox kbd_label" class="def">
@@ -143,7 +139,7 @@
         <strong>NOTE:</strong> When visual focus is in the listbox, DOM focus remains on the textbox and the value of <code>aria-activedescendant</code> on the textbox is set to a value that refers to the listbox option that is visually indicated as focused.
         Where the following descriptions of keyboard commands mention focus, they are referring to the visual focus indicator.
         For more information about this focus management technique, see
-        <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+        <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
       </p>
       <table aria-labelledby="kbd_label_listbox kbd_label" class="def">
         <thead>
@@ -227,7 +223,7 @@
       <p>
         The example combobox on this page implements the following ARIA roles, states, and properties.
         Information about other ways of applying ARIA roles, states, and properties is available in the
-        <a href="../../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
+        <a href="../../#combobox_roles_states_props">Roles, States, and Properties section of the combobox design pattern.</a>
       </p>
       <h3 id="rps_label_textbox">Textbox</h3>
       <table aria-labelledby="rps_label_textbox rps_label" class="data attributes">
@@ -246,12 +242,7 @@
             </th>
             <td></td>
             <td><code>input[type="text"]</code></td>
-            <td>
-              <ul>
-                <li>Identifies the input as a combobox.</li>
-                <li>Note: The primary difference between the ARIA 1.0 pattern and the ARIA 1.1 pattern is the placement of the <code>combobox</code> role.</li>
-              </ul>
-            </td>
+            <td>Identifies the input as a combobox.</td>
           </tr>
           <tr data-test-id="combobox-aria-autocomplete">
             <td></td>
@@ -269,18 +260,13 @@
             <td><code>input[type="text"]</code></td>
             <td>Indicates that the combobox can popup another element to suggest values.</td>
           </tr>
-          <tr data-test-id="combobox-aria-owns">
+          <tr data-test-id="combobox-aria-controls">
             <td></td>
             <th scope="row">
-              <code>aria-owns="#IDREF"</code>
+              <code>aria-controls="#IDREF"</code>
             </th>
             <td><code>input[type="text"]</code></td>
-            <td>
-              <ul>
-                <li>Identifies the element that serves as the popup.</li>
-                <li>Note: In the ARIA 1.1 combobox pattern, the combobox uses <code>aria-controls</code> instead of <code>aria-owns</code>.</li>
-              </ul>
-            </td>
+            <td>Identifies the element that serves as the popup.</td>
           </tr>
           <tr data-test-id="combobox-aria-expanded">
             <td></td>
@@ -311,7 +297,7 @@
                 <li>Enables assistive technologies to know which element the application regards as focused while DOM focus remains on the <code>input</code> element.</li>
                 <li>
                   For more information about this focus management technique, see
-                  <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+                  <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
                 </li>
               </ul>
             </td>
@@ -382,7 +368,7 @@
       <ul>
         <li>
           CSS:
-          <a href="css/combobox-1.0.css" type="text/css">combobox-1.0.css</a>
+          <a href="css/combobox.css" type="text/css">combobox.css</a>
         </li>
         <li>
           CSS:
@@ -390,7 +376,7 @@
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-1.0-list.js" type="text/javascript">combobox-1.0-list.js</a>
+          <a href="js/combobox-list.js" type="text/javascript">combobox-list.js</a>
         </li>
         <li>
           Javascript:
@@ -415,7 +401,7 @@
     </section>
   </main>
   <nav>
-    <a href="../../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
+    <a href="../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
   </nav>
 </body>
 </html>
