Add milestone entries to change log

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6667,11 +6667,18 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
         APG 1.1 supported ARIA 1.1, and this version, APG 1.2, supports ARIA 1.2.
         The following changes have been made to APG 1.1 in order to make this draft of APG 1.2.
       </p>
-      <p>Also see:</p>
+      <ul>
+        <li></li>
+      </ul>
+      <p>For more detail, see:</p>
       <ul>
         <li>
-          <a href="https://github.com/w3c/aria-practices/milestone/7">1.2 APG Working Draft 1 milestone,</a>
-          which lists the GitHub issues that document discussions and reviews of changes included in the December 2017 publication.
+          <a href="https://github.com/w3c/aria-practices/milestone/10">APG 1.2 Working Draft 3 Milestone</a>:
+          Github issues closed in the third working draft of APG 1.2 published in November 2019.
+        </li>
+        <li>
+          <a href="https://github.com/w3c/aria-practices/milestone/7">APG 1.2 Working Draft 1 milestone</a>:
+          GitHub issues closed in the first working draft of APG 1.2 published on July 17, 2018.
         </li>
         <li>Link to a github wiki page of commit history goes here.</li>
       </ul>
