Add link to change log wiki page

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6680,7 +6680,7 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
           <a href="https://github.com/w3c/aria-practices/milestone/7">APG 1.2 Working Draft 1 milestone</a>:
           GitHub issues closed in the first working draft of APG 1.2 published on July 17, 2018.
         </li>
-        <li>Link to a github wiki page of commit history goes here.</li>
+        <li><a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-November-2019-APG-1.2-Working-Draft-3">Detailed change log with links to all commits that in the November 2019 publication  of APG 1.2 that are not in the August 14, 2019 publication of APG 1.1 release 4.</a></li>
       </ul>
     </section>
     
