Revise summary of changes

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6673,8 +6673,9 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
         <li>Added naming guidance for 18 roles that are new in ARIA 1.2.</li>
         <li>Added a button example that illustrates use of the new ARIA 1.2 IDL interface.</li>
         <li>Added a design pattern and example implementation of the new meter role.</li>
+        <li>Added a new listbox example that illustrates new ARIA 1.2 support for named groups of options in a listbox.</li>
+        <li>Revised the editor menubar example to illustrate new ARIA 1.2 support for named groups of items in a menu.</li>
         <li>Due to change in ARIA 1.2, removed Math role from list of roles that have presentational children.</li>
-        <li>To illustrate new ARIA 1.2 support for grouping menu items, Revised the editor menubar example to illustrate how to create named groups of menu item checkboxes.</li>
         <li>In response to feedback, revise description of Escape behavior in the combobox Pattern.</li>
         <li>Corrected color contrast in accordion and date picker examples.</li>
         <li>Fixed 4 bugs in the date picker dialog example.</li>
