Remove ARIA 1.2 from grid combo title and change version in title tag to 1.2

--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>ARIA 1.2 Combobox with Grid Popup Example | WAI-ARIA Authoring Practices 1.1</title>
+<title>Combobox with Grid Popup Example | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -27,7 +27,7 @@
     </ul>
   </nav>
   <main>
-    <h1>ARIA 1.2 Combobox with Grid Popup Example</h1>
+    <h1>Combobox with Grid Popup Example</h1>
     <p>
       The following example combobox implements the
       <a href="../../../#combobox">combobox design pattern</a>
