Update list of similar examples and fix design pattern URI

--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -30,7 +30,7 @@
     <h1>Combobox with Grid Popup Example</h1>
     <p>
       The following example combobox implements the
-      <a href="../../../#combobox">combobox design pattern</a>
+      <a href="../../#combobox">combobox design pattern</a>
       using a grid for the suggested values popup.
     </p>
     <p>
@@ -44,8 +44,11 @@
     </p>
     <p>Similar examples include: </p>
     <ul>
-      <li><a href="listbox-combo.html">Examples of ARIA 1.2 Combobox with Listbox Popup</a>: Comboboxes that demonstrate the various forms of autocomplete behavior using a listbox popup and use the ARIA 1.2 implementation pattern.</li>
+      <li><a href="combobox-autocomplete-both.html">Combobox with Both List and Inline Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q>.</li>
+      <li><a href="combobox-autocomplete-list.html">Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
+      <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: A combo box that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
     </ul>
+    
     <section>
       <h2 id="ex_label">Example</h2>
       <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
