Fix URIs for main doc in keyboard section

--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -82,7 +82,7 @@
       <p>
       The example combobox on this page implements the following keyboard interface.
         Other variations and options for the keyboard interface are described in the
-        <a href="../../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
+        <a href="../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
       </p>
       <h3 id="kbd_label_textbox">Textbox</h3>
       <table aria-labelledby="kbd_label_textbox kbd_label" class="def">
@@ -126,7 +126,7 @@
           <strong>NOTE:</strong> When visual focus is in the grid, DOM focus remains on the textbox and the value of <code>aria-activedescendant</code> on the textbox is set to a value that refers to an element in the grid that is visually indicated as focused.
           Where the following descriptions of keyboard commands mention focus, they are referring to the visual focus indicator.
           For more information about this focus management technique, see
-          <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+          <a href="../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
         </p>
       <table aria-labelledby="kbd_label_popup kbd_label" class="def">
         <thead>
